--- a/projects/recipe-page/index.html
+++ b/projects/recipe-page/index.html
@@ -13,14 +13,14 @@
             alt="zaatar cheese rolls"
         >
         <h3>APPETIZER</h3>
-        <h1>Zaatar Cheese Roll Recipe</h1>
+        <h1>ZAATAR CHEESE ROLLS</h1>
         <p>
             <b>PREP TIME:</b> 1 HOUR 30 MINUTES
-            <br>
+                <br>
             <b>COOK TIME:</b> 30 MINUTES
-            <br>
+                <br>
             <b>TOTAL TIME:</b> 2 HOURS
-            <br>
+                <br>
             <b>YIELDS:</b> 12
         </p>
         <p>
@@ -29,5 +29,106 @@
             and pillowy dinner roll dough. It's cheesy and packed 
             with so much flavor from the zaatar. Let's make them!
         </p>
+        <ul>
+            <a href="#recipe-card">JUMP TO RECIPE</a>
+        </ul>
+            <br>
+        <hr>
+        <img 
+            src="images/zaatar-cheese-rolls.jpg" 
+            width="200"
+            alt="zaatar cheese rolls"
+        >
+        <h3>APPETIZER</h3>
+        <h2 id="recipe-card"> ZAATAR CHEESE ROLLS</h2>
+        <P>
+            This the best appetizer you can make! Think of it 
+            like a rolled up manaeesh except the bread is a fluffy 
+            and pillowy dinner roll dough. It's cheesy and packed 
+            with so much flavor from the zaatar. Let's make them!
+        </P>
+        <p>
+            <b>PREP TIME:</b> 1 HOUR 30 MINUTES
+                <br>
+            <b>COOK TIME:</b> 30 MINUTES
+                <br>
+            <b>TOTAL TIME:</b> 2 HOURS
+                <br>
+            <b>YIELDS:</b> 12
+        </p>
+        <hr>
+        <br>
+        <h2>INGREDIENTS</h2>
+        <h3>FILLING</h3>
+        <ul>
+            <li>1 cup mozzarella cheese, shredded</li>
+            <li>1/4 cup feta, crumbled</li>
+            <li>1/4 cup parmesan, grated</li>
+            <li>1/2 cup zaatar</li>
+            <li>1/2 cup extra virgin olive oil</li>
+        </ul>
+        <h3>FOR ASSEMBLY</h3>
+        <ul>
+            <li>12 <b>dinner roll dough balls</b></li>
+            <li>1 large egg</li>
+            <li>1 tablespoon whole milk</li>
+            <li>toasted sesame seeds, to garnish</li>
+        </ul>
+        <h2>INSTRUCTIONS</h2>
+        <ol>
+            <li>
+                Spray a baking tray lined with parchment paper with oil 
+                and place the frozen dough on the pan, spacing them apart.
+            </li>
+                <br>
+            <li>
+                Cover with plastic wrap also sprayed with oil and let it 
+                thaw and rise in a warm place which can take anywhere from 
+                3 to 5 hours. You can also do this the night before.
+            </li>
+                <br>
+            <li>
+                In one bowl, combine mozzarella cheese with feta cheese 
+                and parmesan. Set aside.
+            </li>
+                <br>
+            <li>
+                In another small bowl, mix together zaatar with olive oil. 
+                Set aside.
+            </li>
+                <br>
+            <li>
+                Preheat oven to 350°F.
+            </li>
+                <br>
+            <li>
+                Once the dough is doubled in size, flour your working surface.
+            </li>
+                <br>
+            <li>
+                Stretch each piece of dough out into a thin long rectangle. 
+                Spread the zaatar mixture all across and sprinkle the cheese. 
+                Tightly roll it up and place on a baking tray lined with 
+                parchment paper, seam side down. Repeat with the rest.
+            </li>
+                <br>
+            <li>
+                Whish together the egg with milk to make the egg wash.
+            </li>
+                <br>
+            <li>
+                Brush the tops with egg wash and sprinkle sesame seeds on top.
+            </li>
+                <br>
+            <li>
+                Bake in the oven for 20 to 24 minutes until golden on top and 
+                puffed up.
+            </li>
+                <br>
+            <li>
+                Allow to cool for 10 minutes before enjoying warm!
+            </li>
+                <br>
+        </ol>
     </body>
 </html>
