--- a/exercises/wiki-page-01/index.html
+++ b/exercises/wiki-page-01/index.html
@@ -13,19 +13,26 @@
             <i>For the album by Trash Boat, see Crown Shyness (album).</i>
         </p>
         <p>
-            <b>Crown shyness</b> <i>(also canopy disengagement,
-            </i> <sup>[1]</sup> <i> canopy shyness,</i>
-            <sup>[2]</sup> <i>or inter-crown 
-            spacing</i> <sup>[3])</sup> is a phenomenon 
+                <b>Crown shyness</b> 
+                <i>(also canopy disengagement,</i> 
+                <sup>[1]</sup> 
+                <i> canopy shyness,</i>
+                <sup>[2]</sup> 
+                <i>or inter-crown spacing</i> 
+                <sup>[3])</sup> 
+            is a phenomenon 
             observed in some tree species, 
             in which the crowns of fully stocked trees do not touch each other, 
-            forming a canopy with channel-like gaps.<sup>[4][5]</sup> 
+            forming a canopy with channel-like gaps.
+                <sup>[4][5]</sup> 
             The phenomenon is most prevalent among trees of the same species, 
             but also occurs between trees of different species.
-            <sup>[6][7]</sup> There exist many hypotheses as to why crown 
+                <sup>[6][7]</sup> 
+            There exist many hypotheses as to why crown 
             shyness is an adaptive behavior, and research 
             suggests that it might inhibit spread of leaf-eating 
-            insect larvae.<sup>[8]</sup>
+            insect larvae.
+                <sup>[8]</sup>
         </p>
         <h4>Contents</h4>
         <ul>
