--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -9,7 +9,8 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
             integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
             crossorigin="anonymous" 
-            referrerpolicy="no-referrer" />
+            referrerpolicy="no-referrer" 
+        />
     </head>
     <body>
         <h1>Artistic Movies And Shows Showcase<h1>
@@ -37,16 +38,18 @@
             alt="arcane season 2 show"
         >
         <p>
-            <b>GENRE:</b> Action Adventure Science fantasy Steampunk
+            <b>GENRE:Action Adventure Science fantasy Steampunk</b>
             <br>
-            <b>RUNTIME:</b> Generally each episode runs between <b>39–44</b> minutes long
+            <b>
+                RUNTIME: Generally each episode runs between 39–44 minutes long
+            </b>
             <br>
             <b>RATING BASED ON LAST SEASON:</b> 
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
         </p>
         <h3>SYNOPSIS</h3>
         <p>
@@ -77,16 +80,16 @@
             alt="spiderman Across the spiderverse movie thumbnail"
         >
         <p>
-            <b>GENRE:</b> Modern superhero genre
+            <b>GENRE: Modern superhero genre</b>
             <br>
-            <b>RUNTIME:</b> 2h 20m
+            <b>RUNTIME: 2h 20m</b>
             <br>
             <b>RATING:</b> 
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
         </p>
         <h4>SYNOPSIS</h4>
         <p>
@@ -107,16 +110,16 @@
             alt="ponyo movie thumbnail"
         >
         <p>
-            <b>GENRE:</b> Japanese animated fantasy film
+            <b>GENRE: Japanese animated fantasy film</b>
             <br>
-            <b>RUNTIME:</b> 1h 43m
+            <b>RUNTIME: 1h 43m</b>
             <br>
             <b>RATING:</b> 
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
         </p>
         <h4>SYNOPSIS</h4>
         <p>
