--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -6,7 +6,7 @@
         <title>Color Palettes Excercise</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body>
+    <body id="body-id">
         <h2 id="palette-1-heading">Cloudy Sunset</h2>
         <div id="palette-1-color-1">
             <h3>Atomic tangerine</h3>
@@ -20,9 +20,57 @@
             <h3>Cool gray</h3>
             <h4>#9EA3D0</h4>
         </div>
-        <div>
+        <div id="palette-1-color-4">
             <h3>Ebony</h3>
-            <h4>#
+            <h4>#565843</h4>
+        </div>
+        <div  id="palette-1-color-5">
+            <h3>Smoky black</h3>
+            <h4>211D11</h4>
+        </div>
+        <br>
+        <h2 id="palette-2-heading">Strawberry Icecream</h2>
+        <div id="palette-2-color-1">
+            <h3>Uranian Blue</h3>
+            <h4>A7DFFA</h4>
+        </div>
+        <div id="palette-2-color-2">
+            <h3>Navajo white</h3>
+            <h4>F6D9AD</h4>
+        </div>
+        <div id="palette-2-color-3">
+            <h3>Lavendar pink</h3>
+            <h4>F0AACC</h4>
+        </div>
+        <div id="palette-2-color-4">
+            <h3>Dogwood rose</h3>
+            <h4>CF2860</h4>
+        </div>
+        <div id="palette-2-color-5">
+            <h3>Razzmatazz</h3>
+            <h4>E91F77</h4>
+        </div>
+        <br>
+        <h2 id="palette-3-heading"> Hitchhiker's cologne</h2>
+        <div id="palette-3-color-1">
+            <h3>Robin egg blue</h3>
+            <h4>45C5D9</h4>
+        </div>
+        <div id="palette-3-color-2">
+            <h3>Dim gray</h3>
+            <h4>5D6465</h4>
+        </div>
+        <div id="palette-3-color-3">
+            <h3>Rose ebony</h3>
+            <h4>6E4949</h4>
+        </div>
+        <div id="palette-3-color-4">
+            <h3>Cocoa brown</h3>
+            <h4>E06900</h4>
+        </div>
+        <div id="palette-3-color-5">
+            <h3>Seal brown</h3>
+            <h4>612D17</h4>
         </div>
     </body>
 </html>
