--- a/exercises/upside-down-tetris/index.html
+++ b/exercises/upside-down-tetris/index.html
@@ -59,6 +59,20 @@
                 <div class="tetris-block orange"></div>
                 <div class="tetris-block red"></div>
                 <div class="tetris-block red"></div>
+                <div class="tetris-block green"></div>
+                <div class="tetris-block green"></div>
+                <div class="tetris-block-1"></div>
+                <div class="tetris-block-1"></div>
+                <div class="tetris-block pink"></div>
+                <div class="tetris-block pink"></div>
+                <div class="tetris-block pink"></div>
+                <div class="tetris-block-1"></div>
+                <div class="tetris-block green"></div>
+                <div class="tetris-block green"></div>
+                <div class="tetris-block-1"></div>
+                <div class="tetris-block-1"></div>
+                <div class="tetris-block pink"></div>
+                <div class="tetris-block-1"></div>
                 <!-- DON'T MODIFY ANYTHING PAST THIS POINT-->
             </div>
         </div>
