--- a/exercises/product-showcase-site/index.html
+++ b/exercises/product-showcase-site/index.html
@@ -7,69 +7,113 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="light-container">
-            <div class="single-column">
+        <div class="grey-container">
+            <div class="single-column" id="box-1">
                 <h1>Nikon Camera</h1>
+                <img
+                    src="images/nikon camera.jpg"
+                    alt="Nikon Camera, grey modern image"
+                >
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
+                    A Nikon camera is a photographic device manufactured by 
+                    Nikon Corporation, a Japanese multinational corporation 
+                    headquartered in Tokyo. Nikon cameras are renowned for 
+                    their quality, durability, and advanced technology. 
+                    They come in various types, including:
                 </p>
+                <ol>
+                    <li>
+                        DSLR Cameras: Digital Single-Lens Reflex cameras use 
+                        a mirror mechanism to provide an optical viewfinder, 
+                        offering high image quality and versatility with 
+                        interchangeable lenses. Popular models include the 
+                        Nikon D850 and D7500.
+                    </li>
+                    <li>
+                        Mirrorless Cameras: These cameras do not use a mirror 
+                        mechanism, allowing for a more compact design while 
+                        still offering high image quality and interchangeable 
+                        lenses. Examples include the Nikon Z6 and Z7 series.
+                    </li>
+                    <li>
+                        Compact Cameras: Also known as point-and-shoot cameras, 
+                        these are smaller, simpler cameras ideal for casual 
+                        photography. Nikon's COOLPIX series is a well-known 
+                        line of compact cameras.
+                    </li>
+                    <li>
+                        Action Cameras: Designed for capturing fast-paced 
+                        action and extreme sports, these cameras are rugged 
+                        and often waterproof. The Nikon KeyMission series fits 
+                        this category.
+                    </li>
+                </ol>
+                <h3>Who uses them?</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
-                </p>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
-                </p>
-                <h3>lorem ipsum dolor</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
+                    Nikon cameras are favored by both professional 
+                    photographers and hobbyists due to their reliability, 
+                    advanced features, and the wide range of lenses and 
+                    accessories available. They are used in various photography 
+                    genres, including landscape, portrait, sports, and wildlife 
+                    photography.
                 </p>
             </div>
         </div>
         <div class="dark-container">
-            <div class="single-column">
-                <h1>Nikon Parts</h1>
+            <div class="single-column" id="box-2">
+                <h1>Buttons and Controls</h1>
+                <img
+                    src="images/nikoncamerablack.jpg"
+                    alt="Nikon Camera, dark modern image"
+                >
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
+                    A Nikon camera, like most digital cameras, consists of 
+                    several key components. Here are the primary parts and 
+                    their functions:
                 </p>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
-                </p>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
-                </p>
-                <h3>lorem ipsum dolor</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Saepe, similique. Possimus corporis iusto eius provident 
-                    saepe, debitis dolor exercitationem sit sed culpa ipsa 
-                    soluta obcaecati voluptate quos aliquid cumque tenetur?
-                </p>
+                <ol>
+                    <li>
+                        Menu Button: Accesses the camera's menu system.
+                    </li>
+                    <br>
+                    <li>
+                        Control Dials: Adjust settings such as aperture, 
+                        shutter speed, and ISO.
+                    </li>
+                    <br>
+                    <li>
+                        Playback Button: Allows you to view photos and 
+                        videos stored on the memory card
+                    </li>
+                    <br>
+                    <li>
+                        Function Buttons: Customizable buttons that can 
+                        be set to control various functions.
+                    </li>
+                    <br>
+                    <li>
+                        Exposure Compensation Button: Adjusts the 
+                        exposure level.
+                    </li>
+                    <br>
+                    <li>
+                        ISO Button: Changes the camera's sensitivity to light.
+                    </li>
+                    <br>
+                    <li>
+                        White Balance Button: Adjusts the color temperature 
+                        of the photos.
+                    </li>
+                </ol>
             </div>
         </div>
-        <div class="light-container">
-            <div class="single-column">
-                <h1>Why Nikon</h1>
+        <div class="lightgrey-container">
+            <div class="single-column"id="box-3">
+                <h1>Why Nikon?</h1>
+                <img
+                    src="images/nicon lense.jpeg"
+                    alt="Nikon Cameras side by side"
+                >
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Saepe, similique. Possimus corporis iusto eius provident 
