--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -56,20 +56,22 @@
                 </div>
                 <h2 id="section2">Possible physiological explinations</h2>
                 <hr>
-                <img
-                     src="images/crown-shyness-green.jpg"
-                     width="350"
-                     alt="example of canopy shyness"
-                >
-                <p>
-                    The exact physiological basis of crown shyness is uncertain.
-                    <sup>[6]</sup> The phenomenon has been discussed in scientific 
-                    literature since the 1920s.<sup>[9]</sup> The variety of 
-                    hypotheses and experimental results might suggest that 
-                    there are multiple mechanisms across 
-                    different species, an example of convergent evolution.
-                    <sup><i>[citation needed]</i></sup>
-                </p>
+                <div class="side-by-side">
+                    <p>
+                        The exact physiological basis of crown shyness is uncertain.
+                        <sup>[6]</sup> The phenomenon has been discussed in scientific 
+                        literature since the 1920s.<sup>[9]</sup> The variety of 
+                        hypotheses and experimental results might suggest that 
+                        there are multiple mechanisms across 
+                        different species, an example of convergent evolution.
+                        <sup><i>[citation needed]</i></sup>
+                    </p>
+                    <img
+                        src="images/crown-shyness-green.jpg"
+                        width="350"
+                        alt="example of canopy shyness"
+                    >
+                </div>
                 <p>
                     Some hypotheses contend that the interdigitation of canopy 
                     branches leads to "reciprocal pruning" of adjacent trees: 
