--- a/exercises/Blog-with-sidebar/index.html
+++ b/exercises/Blog-with-sidebar/index.html
@@ -11,104 +11,119 @@
             <div id="sidebar-content">
                 <h2>Types of Trees</h2>
                 <ul>
-                    <li><a href="#">Paw Paws</a></li>
-                    <li><a href="#">Red Dwarf Banana</a></li>
-                    <li><a href="#">Nikitski Ronni Pomagranite</a></li>
+                    <li><a href="#pawpaws">Paw Paws</a></li>
+                    <li><a href="#banana">Red Dwarf Banana</a></li>
+                    <li><a href="#Pomagranite">Nikitski Ronni Pomagranite</a></li>
                 </ul>
-                <h2>Other Links</h2>
+                <h2>Recipe Links</h2>
                 <ul>
-                    <li><a href="#">Other Link 1</a></li>
-                    <li><a href="#">Other Link 2</a></li>
-                    <li><a href="#">Other Link 3</a></li>
-                    <li><a href="#">Other Link 4</a></li>
-                    <li><a href="#">Other Link 5</a></li>
-                    <li><a href="#">Other Link 6</a></li>
+                    <li><a href="#">Pomagranite Cheese balls</a></li>
+                    <li><a href="#">banana pudding</a></li>
+                    <li><a href="#">banana ice cream</a></li>
+                    <li><a href="#">Pomagranite juice</a></li>
+                    <li><a href="#">paw paw bread</a></li>
+                    <li><a href="#">paw paw icecream</a></li>
                 </ul>
             </div>
             <div id="main-content">
                 <h1>Rare Fruiting Trees</h1>
                 <p>by Ashley Lodnono, 6/20/2024</p>
                 <br>
-                <h2>Paw Paw Trees</h2>
+                <h2 id="pawpaws">Paw Paw Trees</h2>
+                <img src="images/paw-paw-fruits.jpg" alt="paw paw fruits">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cupiditate necessitatibus ab ipsum? Natus suscipit 
-                    asperiores alias ipsam, cum, accusamus quisquam nam 
-                    magnam aspernatur vel tenetur quibusdam. Consequatur 
-                    itaque similique provident. Lorem ipsum dolor sit, amet 
-                    consectetur adipisicing elit. Iste ipsum veritatis ullam, 
-                    dolor tempora quo. Omnis, id pariatur. Accusantium facere 
-                    quo praesentium aspernatur omnis qui ratione impedit 
-                    aperiam minima dolorem.
+                    The pawpaw tree (Asimina triloba) is a large shrub or 
+                    small tree that can grow up to 35 feet tall and 12 inches 
+                    in diameter. It has a broad crown and slender trunk, and 
+                    its leaves are large, shiny, and dark green with a 
+                    tropical appearance. The leaves are alternate, simple, 
+                    and spirally arranged, and can grow up to a foot long and 
+                    five inches wide. They are broadest above the middle, with 
+                    smooth margins and pointed tips, and have a whitish 
+                    coating on the upper surface and rusty hairs on the 
+                    underside. The leaves are aromatic and smell like bell 
+                    pepper, and they can turn yellow or golden brown in the 
+                    fall.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Porro, commodi similique ipsa tempora perspiciatis, sed 
-                    exercitationem reprehenderit sapiente a cumque voluptates 
-                    veniam est, quia totam voluptatibus eaque consectetur 
-                    optio ipsum.
+                    Pawpaw grows in full sun as an adult tree 
+                    (especially with supplemental irrigation, 
+                    as is found in Pawpaw orchards) to full shade 
+                    (as an understory tree under high-branched large trees) 
+                    and is found in zones 5 to 8.
                 </p>
-                <h3>Lorem ipsum dolor</h3>
+                <h3>Fruit Taste</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Dolore architecto explicabo reprehenderit vel saepe, 
-                    illum vitae dicta tempora aperiam repellendus sed 
-                    aspernatur corrupti consequatur culpa ratione dolor
-                    tempore quas ipsa.
+                    Some describe the flavor as bright, vibrant, and tropical, 
+                    with a mix of mango, banana, berries, pineapple, and 
+                    passion fruit. Others say it has a yeasty, floral 
+                    aftertaste similar to unfiltered wheat beer.
+                    Pawpaws have soft, pale yellow flesh that can be jelly-like.
+                     Their common names include "poor man's banana," 
+                     "American custard apple," and "Kentucky banana" because 
+                     of their flavor and texture, which make them a good 
+                     substitute for bananas in recipes.
+                     Pawpaws have waxy, green skin that turns black as the 
+                     fruit ripens, and large, glossy, dark brown seeds that 
+                     are toxic to humans.
                 </p>
-                <h2>Red Dwarf Banana</h2>
+                <h2 id="banana">Red Dwarf Banana</h2>
+                <img src="images/red-dwarf-banana.jpg" alt="red bananas">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cupiditate necessitatibus ab ipsum? Natus suscipit 
-                    asperiores alias ipsam, cum, accusamus quisquam nam 
-                    magnam aspernatur vel tenetur quibusdam. Consequatur 
-                    itaque similique provident. Lorem ipsum dolor sit, amet 
-                    consectetur adipisicing elit. Iste ipsum veritatis ullam, 
-                    dolor tempora quo. Omnis, id pariatur. Accusantium facere 
-                    quo praesentium aspernatur omnis qui ratione impedit 
-                    aperiam minima dolorem.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Porro, commodi similique ipsa tempora perspiciatis, sed 
-                    exercitationem reprehenderit sapiente a cumque voluptates 
-                    veniam est, quia totam voluptatibus eaque consectetur 
-                    optio ipsum.
-                </p>
-                <h3>Lorem ipsum dolor</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Dolore architecto explicabo reprehenderit vel saepe, 
-                    illum vitae dicta tempora aperiam repellendus sed 
-                    aspernatur corrupti consequatur culpa ratione dolor
-                    tempore quas ipsa.
-                </p>
-                <h2>Nikitski Ronni Pomagranite</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cupiditate necessitatibus ab ipsum? Natus suscipit 
-                    asperiores alias ipsam, cum, accusamus quisquam nam 
-                    magnam aspernatur vel tenetur quibusdam. Consequatur 
-                    itaque similique provident. Lorem ipsum dolor sit, amet 
-                    consectetur adipisicing elit. Iste ipsum veritatis ullam, 
-                    dolor tempora quo. Omnis, id pariatur. Accusantium facere 
-                    quo praesentium aspernatur omnis qui ratione impedit 
-                    aperiam minima dolorem.
+                    The Dwarf Red Banana Tree has wide leaves that offer 
+                    great shade. You can create your own private jungle! 
+                    You'll notice the Dwarf Red Banana Tree blooming in 
+                    mid-summer. It's always a treat watch its yellow-green 
+                    bananas grow in and turn redder as it reaches maturity.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Porro, commodi similique ipsa tempora perspiciatis, sed 
-                    exercitationem reprehenderit sapiente a cumque voluptates 
-                    veniam est, quia totam voluptatibus eaque consectetur 
-                    optio ipsum.
+                    Red Dwarf banana trees thrive in USDA 
+                    hardiness zones 9-11. These zones provide the warm 
+                    temperatures and humidity that banana trees need for 
+                    optimal growth. In cooler climates, they can be grown 
+                    in containers and brought indoors during the colder months.
                 </p>
-                <h3>Lorem ipsum dolor</h3>
+                <h3>Fruit Taste</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Dolore architecto explicabo reprehenderit vel saepe, 
-                    illum vitae dicta tempora aperiam repellendus sed 
-                    aspernatur corrupti consequatur culpa ratione dolor
-                    tempore quas ipsa.
+                    The Red Dwarf banana, also known as the Dwarf Red banana, 
+                    offers a unique and delightful flavor profile characterized 
+                    by its exceptional sweetness and subtle tropical 
+                    fruitiness. The creamy and smooth texture enhances its 
+                    rich, indulgent taste, often described as having undertones 
+                    of raspberry or mango. This exotic flavor combination makes 
+                    the Red Dwarf banana a favorite for fresh eating and 
+                    various culinary applications, providing a distinct 
+                    and enjoyable banana experience.
+                </p>
+                <h2 id="Pomagranite">Nikitski Ronni Pomagranite</h2>
+                <img src="images/pomagranate.jpg" alt="pomagranite flower">
+                <p>
+                    The Nikitski Ranni pomegranate is a Russian variety of 
+                    pomegranate that is known for its sweet and tart flavor 
+                    and large size. The fruit can grow up to 6 inches in 
+                    diameter, has light pink skin, and red arils. The Nikitski 
+                    Ranni pomegranate tree also produces bright orange flowers 
+                    in the spring and is heat tolerant. The fruit is resistant 
+                    to cracking and can be harvested between September 
+                    and October.
+                </p>
+                <p>
+                    The Nikitski Ranni pomegranate tree can grow in USDA 
+                    zones 6–10 and prefers full sun for best fruit production. 
+                    It is self-fruitful, but planting a second tree nearby can 
+                    increase production. When planting a Nikitski Ranni 
+                    pomegranate tree, it is recommended to soak the roots 
+                    for 30 minutes, plant immediately, and secure the plant 
+                    in its pot with clear tape.
+                </p>
+                <h3>Fruit Taste</h3>
+                <p>
+                    Pomegranate is a fruit that is sweet and tart with a thick 
+                    skin. The part of this fruit that you eat is the seeds 
+                    since they contain juicy flavors. The pomegranate's flavor 
+                    is sometimes compared to both grapes and cranberries. 
+                    While it may look slightly different from other fruits, 
+                    it is just as tasty.
                 </p>
             </div>
         </div>
