--- a/projects/mebay/index.html
+++ b/projects/mebay/index.html
@@ -8,26 +8,35 @@
     </head>
     <body>
         <div id="layouts">
-            <div id="header">Mebay</div>
+            <div id="header">
+                mebay
+            </div>
             <div id="column-1">
-                <h3>images</h3>
-                <img 
-                src="images/monkey-plush.jpg"
-                alt="flexible seal steals the show at beach yoga event"
-                >
-                <img 
-                src="images/monkey-plush.jpg"
-                alt="flexible seal steals the show at beach yoga event"
-                >
-                <img 
-                src="images/monkey-plush.jpg"
-                alt="flexible seal steals the show at beach yoga event"
-                >
-                <img 
-                src="images/monkey-plush.jpg"
-                alt="flexible seal steals the show at beach yoga event"
-                >
-    
+                    <a href="#">
+                        <img class="side"
+                        src="images/sidemonkey.jpg"
+                        alt="flexible seal steals the show at beach yoga event"
+                        >
+                    </a>
+                    <a href="#">
+                        <img class="side"
+                        src="images/monkeytag.jpg"
+                        alt="flexible seal steals the show at beach yoga event"
+                        >
+                    </a>
+                    <a href="#">
+                        <img class="side"
+                        src="images/tag1monkey.jpg"
+                        alt="flexible seal steals the show at beach yoga event"
+                        >
+                    </a>
+                    <a href="#">
+                        <img class="side"
+                        src="images/tag2monkey.jpg"
+                        alt="flexible seal steals the show at beach yoga event"
+                        >
+                    </a>
+                </ul>
             </div>
             <div id="column-2">
                 <img 
@@ -41,14 +50,25 @@
                     with Tag Protector RARE
                 </h4>
                 <p>
-                    US $34.95
-                    <br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Dolore architecto explicabo reprehenderit vel saepe, 
-                    illum vitae dicta tempora aperiam repellendus sed 
-                    aspernatur corrupti consequatur culpa ratione dolor
-                    tempore quas ipsa.
+                    <b>US $34.95</b>
                 </p>
+                <h6>
+                    or Best Offer
+                    <br>
+                    Was US $50.00 (30% off)Price details
+                    Condition:
+                    New
+                </h6>
+                <h6>
+                    Quantity:
+                <div id="quan1">1</div>
+                    6 available 10 sold
+                <hr>
+                <br>
+                <a href="buy-now">Buy it now</a>
+                <a href="#">Add to cart</a>
+                <a href="#">Make an offer</a>
+                <a href="#">Add to wishlist</a>
             </div>
         </div>
     </body>
