--- a/demos/16-cards/index.html
+++ b/demos/16-cards/index.html
@@ -44,8 +44,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Facere ratione laudantium quos, aliquam nesciunt tempore 
                     eveniet. Lorem ipsum dolor sit amet consectetur adipisicing 
-                    elit. Facere ratione laudantium quos, aliquam nesciunt 
-                    tempore.
+                    elit. Facere ratione laudantium quos, aliquam nesciunt tempore.
                 </p>
                 <a href="#">Learn More</a>
             </div>
