--- a/exercises/three heroes/hero-2.html
+++ b/exercises/three heroes/hero-2.html
@@ -7,7 +7,10 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Page 2</h1>
-        <a href="hero-3.html">Go to page 3</a>
+        <div id="hero-2">
+            <h1>Maybe page three will be better?</h1>
+            <h4>more flowers are nice but lets add some more green and sun</h4>
+            <a href="hero-3.html">Go to page 3</a>
+        </div>
     </body>
 </html>
