--- a/exercises/three-heroes/hero-3.html
+++ b/exercises/three-heroes/hero-3.html
@@ -7,7 +7,12 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Page 3</h1>
-        <a href="index.html">Go back to Home</a>
+        <div id="hero-3">
+            <div id="type-content">
+                <h1>Perfect!</h1>
+                <h4>Nature sure is beautiful!</h4>
+                <a href="index.html">Go back to Page 1</a>
+            </div>
+        </div>
     </body>
 </html>
