--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -9,11 +9,29 @@
     <body>
         <div id="hero-1">
             <div class="hero-content">
-                <h2>Trees and nature</h2>
-                <h4>Nature is beautiful</h4>
+                <h2>Minimalistic Black & White</h2>
+                <h4>Aesthetic Photography</h4>
                 <div>
-                    <a href="#">look at the trees</a>
+                    <a href="#Gallery-Section">Visit the Gallery</a>
                 </div>
+            </div>
+        </div>
+        <div id="gallery-1">
+            <h3 id="Gallery-Section">Black & White Gallery (flexbox)</h3>
+            <div class="horizontal-masonry-gallery">
+                <img src="images/waves-grey.jpg" alt="waves">
+                <img src="images/basketplane.jpg" alt="basketball hoop">
+                <img src="images/clocktower.jpg" alt="clocktower">
+                <img src="images/escalators.jpg" alt="escalators">
+                <img src="images/journal-corner.jpg" alt="journal on top left">
+                <img src="images/perfume.jpg" alt="perfume bottle">
+                <img src="images/journal.jpg" alt="journal and coffee">
+                <img src="images/phone-on-desk.jpg" alt="phone on a desk">
+                <img src="images/shoes-b&w.jpg" alt="nike shoes">
+                <img src="images/phone-insides.jpg" alt="phone insides">
+                <img src="images/tower-b&w.jpg" alt=" vertical architecture">
+                <img src="images/arrow-right.jpg" alt="arrow on wall">
+                <img src="images/window-b&w.jpg" alt="window">
             </div>
         </div>
     </body>
