--- a/exercises/Client-Navbars/index.html
+++ b/exercises/Client-Navbars/index.html
@@ -7,13 +7,16 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="header">
-            <div id="navbar">
-                <a href="#" id="logo">
+        <div id="sculpt-header">
+            <div id="sculpt-navbar">
+                <a id="logo">
                     <h1>Sculptor's Haven</h1>
                 </a>
-                <a href="#">Gallery</a>
-                <a href="#">Content</a>
+                <a>Gallery</a>
+                <a>Content</a>
+            </div>
+            <div id="layout">
+                <a id="sculpt-image"></a>
             </div>
         </div>
     </body>
